fixed alignment, done footer and subscribe

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.container{
+#overlay{
     position:static;
     top: 0;
     right: 0;
@@ -120,21 +120,82 @@ strong{
     margin: auto;
     box-sizing: content-box;
     border:3px solid white ;
-    box-shadow: 2px 2px 5px grey;
-    
+    box-shadow: 2px 2px 5px grey; 
 }
 #fastfoodtxt{
     text-align: left;
    width: 70%;
    margin: auto;
-   
-
 }
 #fastfoodphoto{
     text-align: center;
     justify-content: space-around;
     width: 70%;
+    margin: auto;  
+}
+#footer{
+    background-color: #F15A29;
+    text-align: center;
+    color: white;
+    font-size: 24px;
     margin: auto;
+}
+#footerburger{
+    text-align: center;
+    margin: auto;
+    padding-top: 3em;
+    width: 100%  
+}
+.footerimg {
+    width: 100%;
+    height: 100%;
+}
+#subscribe{
+    background-image: url(./backgrounds/subscribe.jpg);
+    background-size: cover;
+    width: 100%;
+    padding: 10rem 0;
+   
+}
+.subscribe {
+    box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
+    padding: 2% 3%;
+    height: auto;
+    width: 30%;
+    margin: auto;
+    font-family: 'Merienda One', cursive;
+    font-size: 100%;
+    text-transform: capitalize;
+    border: 0;
+    text-align: center;
+    background-color: white;
+    opacity: 0.5;
     
 }
-
+button{
+    box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
+    padding: 2% 3%;
+    height: auto;
+    width: 20%;
+    margin: auto;
+    font-family:'Noto Sans HK', sans-serif;
+    font-size: 100%;
+    text-transform: capitalize;
+    border: 0;
+    text-align: center;
+    background-color: #F15A29;
+    justify-content: left;
+    }
+ .float{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;  
+        
+        
+    
+    }
+#subscribe h3{
+    color: white;
+    text-align: center;
+    font-family:'Noto Sans HK', sans-serif;
+}
